# Chatbot-with-Long-Term-Memory

./: CONFIG.py  agent.py  docker-compose.yaml  embedded_gen.py  main.py  prompts.py  pyproject.toml  remote_mcp.py  show_results.sql  tools.py  trim_plus_deletion.py  trimming.py
karavantech_faiss/: index.faiss  index.pkl
